updates the site - added more about myself

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Francisco's Personal Site</title>
+
+<link rel="stylesheet" href="css/styles.css">
+
+
+
+
+
+
   </head>
   <body>
 
+</body>
 
 <table cellspacing = 20>
   <tr>
@@ -14,7 +23,19 @@
 <td><h1> Francisco Alfaro</h1>
 
 <p><em>Founder of <strong><a href="https://youarewhatyoucreate.netlify.app/yourmind">FALLEN+ FUTURISTICS</a></strong></em></p>
- <p>I am a very open minded individual with a Bachelors of Computer Science  </p></td>
+ <p>I'm a highly receptive person that wants to get his bachelor's in computer science. I'm drawn to anything quantum and "out of this world". The idea of the potential future inspires me.
+ My objectives include assisting robotics that clean the oceans, save animals, feed the planet,
+ and even solve real-world problems on their own through AI. I want to contribute to creating a better society for people in the future. I am highly attracted of the idea of Artificial Intelligence.
+ I find it exciting to consider that there may be life in the universe that possesses the same or perhaps greater talents than us. (potential lives that we have created) 
+Humans are incapable of being as dynamic as computers, whose activeness can grow as a result of otherworldly concepts!
+I firmly feel that meditation is a source of happiness and, with time, even consider it to be more of an out-of-body experience. I think it helps us learn vital things about ourselves and the universe,
+ and I have high hopes that I'll learn the reasons for events that could affect our world, like infinite batteries, flying cars, and even interdimensional technologies.
+One can only dream, right? Additionally, I am a huge lover of the butterfly effect, the string theory, and all things theoretically physiological.
+
+
+
+
+  </p></td>
 
 
 
@@ -46,7 +67,7 @@
   </thead>
   <tr>
     <td>2025</td>
-    <td>Found the real Quantum Mechanics through using Neuralink</td>
+    <td>Found the real Quantum Mechanics through Neuralink</td>
   </tr>
 
   <tr>
@@ -146,6 +167,24 @@
 <a href="hobbies.html">My Hobbies</a>
 <a href="contact-me.html">Contact Details</a>
 
+
+  </body>
+</html>
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
 
   </body>
 </html>
